--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,22 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Maneja tus tiempos de descanso">
+    <meta name="theme-color" content="#2196f3">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Descansador</title>
     <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="icon" type="image/png" href="assets/img/flaticon_dark_mode.png" media="(prefers-color-scheme: dark)">
     <link rel="icon" type="image/png" href="assets/img/flaticon_light_mode.png" media="(prefers-color-scheme: light)">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body class="mat-typography">
     <app-root></app-root>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
